--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_category"
+        android:id="@+id/bottom_navigation_category"
         android:icon="@drawable/ic_category"
         android:title="@string/title_category" />
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/bottom_navigation_home"
         android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
 
