--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="172dp"
     android:padding="16dp"
+    android:background="#FFC107"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:gravity="bottom">
