--- a/app/src/main/res/layout/fragment_first_name.xml
+++ b/app/src/main/res/layout/fragment_first_name.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginBottom="76dp"
         android:layout_marginEnd="8dp"
