--- a/app/src/main/res/layout/fragment_last_name.xml
+++ b/app/src/main/res/layout/fragment_last_name.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/lastname"
-        android:layout_width="175dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
         android:layout_marginEnd="8dp"
